--- a/backend/src/main/webapp/app/views/payment/main.html
+++ b/backend/src/main/webapp/app/views/payment/main.html
@@ -54,10 +54,13 @@
 							
 							 <div class="form-group input-group" style="margin-bottom: 10px;">
 			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ยอดซื้อรวม</span>
-			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ (adminSum + customerSum) | number:2 }}</span>
+			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ sum1 | number:2 }}</span>
 			                	
-			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ยอดซื้อ หัก ส่วนลดรวม</span>
-			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ (adminSumOnDiscount + customerSumOnDiscount) | number:2 }}</span>
+			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ส่วนลดรวม</span>
+			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ sumDiscount1 | number:2 }}</span>
+			                	
+			                	<span class="input-group-addon" style="background-color: #984133; color: #cccccc">ยอดซื้อรวมสุทธิ</span>
+			                	<span class="form-control" style="background-color: #3f6740; color: #cccccc;">{{ sum1 - sumDiscount1 | number:2 }}</span>
 							</div>
 							
 						    <div>
@@ -80,13 +83,13 @@
 											<td style="width: 20%; text-align: right; height: 47px;">{{ pay.sum | number:2 }}</td>
 											<td style="width: 25%; text-align: center; height: 47px;">
 												<div class="form-group input-group input-sm" style="margin-bottom: 0; padding: 0;">
-								                	<span class="input-group-addon" style="min-width: 100px; text-align: right; background-color: #474646; color: #cccccc;">{{ (pay.sum - pay.sumOnDiscount) | number:2 }}</span>
+								                	<span class="input-group-addon" style="min-width: 100px; text-align: right; background-color: #474646; color: #cccccc;">{{ pay.sumDiscount | number:2 }}</span>
 											      	<select class="form-control input-sm" ng-model="pay.price" ng-disabled="pay.sum == 0" ng-options="option.id as option.priceListName for option in priceList" ng-change="changePrice(pay)">
 														<option value="">--กรุณาเลือก--</option>
 													</select>
 											    </div>
 											</td>
-											<td style="width: 20%; text-align: right; height: 47px;">{{ pay.sumOnDiscount | number:2 }}</td>
+											<td style="width: 20%; text-align: right; height: 47px;">{{ (pay.sum - pay.sumDiscount) | number:2 }}</td>
 										</tr>
 									</tbody>
 								</table>
@@ -124,26 +127,26 @@
 											<th style="width: 25%; text-align: center; font-weight: 500;">ประเภท</th>
 											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อ</th>
 											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดลด (ส่วนลด %)</th>
-											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อ หัก ส่วนลด</th>
+											<th style="width: 25%; text-align: center; font-weight: 500;">ยอดซื้อสุทธิ</th>
 										</tr>
 									</thead>
 									<tbody>
 										<tr ng-repeat="pay in paymentDataList">
 											<td style="text-align: left;">{{ pay.title }}</td>
 											<td style="text-align: right;">{{ pay.value | number:2 }}</td>
-											<td style="text-align: right;">{{ (pay.value - pay.discount) | number:2 }} ({{ priceData[pay.percent] }}%)</td>
-											<td style="text-align: right;">{{ pay.discount | number:2 }}</td>
+											<td style="text-align: right;">{{ pay.discount | number:2 }} ({{ priceData[pay.percent] }}%)</td>
+											<td style="text-align: right;">{{ (pay.value - pay.discount) | number:2 }}</td>
 										</tr>
 										<tr style="font-size: 1.3em;">
 											<td style="text-align: center; background-color: #ccc; color: black;">ยอดรวม</td>
 											<td style="text-align: right; background-color: #ccc; color: black;">
-												<span>{{ sum | number:2 }}</span>
+												<span>{{ sum2 | number:2 }}</span>
 											</td>
 											<td style="text-align: right; background-color: #ccc; color: black;">
-												<span>{{ (sum - sumDiscount) | number:2 }}</span>
+												<span>{{ sumDiscount2 | number:2 }}</span>
 											</td>
 											<td style="text-align: right; background-color: #ccc; color: black;">
-												<span>{{ sumDiscount | number:2 }}</span>
+												<span>{{ (sum2 - sumDiscount2) | number:2 }}</span>
 											</td>
 										</tr>
 									</tbody>
